# st-templ

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: format-and-lint.yml  run-tests.yml
.streamlit/: config.toml  secrets.example.toml
dev/mocks/: counter.py
src/: main.py  router.py
src/components/navigations/: sidebar.py
src/components/pages/: __init__.py  another_page.py  main_page.py  result_page.py  sub_page.py
src/models/: counter.py
src/procotols/: counter.py
src/static/css/: main_page.css
tests/e2e/: test_e2e.py  test_launch.py
tests/unit/: test_counter.py
