[project]
name = "st-templ"
version = "0.1.0"
description = "A template structure for a Streamlit application."
authors = [{name = "akitorahayashi", email = "atora.has75@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"streamlit>=1.49.1",
	"pandas>=2.0.0",
	"numpy>=1.26.0,<2.0",
	"plotly>=5.17.0",
	"httpx>=0.28.1",
	"beautifulsoup4>=4.12.0",
	"watchdog>=6.0.0",
]

[dependency-groups]
dev = [
	"pytest>=8.4.1",
	"black>=25.1.0",
	"ruff>=0.12.11",
	"ipython>=9.5.0",
	"selenium>=4.0.0",
	"python-dotenv>=1.0.0",
	"requests>=2.31.0",
	"pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]

[tool.black]
target-version = ['py312']
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.venv
    | venv
    | env
    | build
    | dist
    | .*/(bin|lib|share|etc)
    | .*/pyvenv\.cfg
)/
'''

[tool.ruff]
target-version = "py312"

exclude = [
	"__pycache__",
	"migrations",
	"db.sqlite3",
	"*.pyc",
	".venv",
	"venv",
	"env",
	"*/bin/**",
	"*/lib/**",
	"*/share/**",
	"*/etc/**",
	"*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line too long) and F841 (unused variable) are ignored
ignore = ["E501", "F841"]